# reddit-scraper-and-analyzer

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  scrape_data.py
dags/: exampledag.py  load_and_analyze.py  scrape_reddit_and_load.py
dbt/: parse_dbt_csv.py
scripts/: scrape_data.py
