[project]
name = "eb-1a-reddit-scrape-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Karnam"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "praw (>=7.8.1,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "duckdb (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
